[gd_scene load_steps=2 format=3 uid="uid://cbbhsn65au72q"]

[ext_resource type="Script" path="res://control.gd" id="1_wyk7d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyk7d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 248.0
offset_right = 928.0
offset_bottom = 480.0

[node name="OptionA" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionB" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionC" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionD" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="NextQuestionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next Question"

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 128.0
offset_right = 928.0
offset_bottom = 192.0
text = "Random"

[connection signal="pressed" from="VBoxContainer/OptionA" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionB" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionC" to="." method="_on_option_c_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionD" to="." method="_on_option_d_pressed"]
[connection signal="pressed" from="VBoxContainer/NextQuestionButton" to="." method="_on_next_question_button_pressed"]
